idf_component_register(SRCS "main.cpp"
                            "imu/imu.cpp"
                            "sd_logger/sd_logger.cpp"
                            "fuel/fuel.cpp"
                            "voltage/voltage.cpp"
                            "wifi_ap/wifi_ap.cpp"
                            "web_server/web_server.cpp"
                    INCLUDE_DIRS "." 
                                    "imu" 
                                    "sd_logger" 
                                    "fuel" 
                                    "voltage" 
                                    "wifi_ap" 
                                    "web_server"
                    EMBED_TXTFILES "dashboard/index.html"
                                    "dashboard/style.css"
                                    "dashboard/script.js")