idf_component_register(SRCS "main.cpp"
                        "imu/imu.cpp"
                        "temperature/temperature.cpp"
                        "sd_logger/sd_logger.cpp"
                        "fuel/fuel.cpp"
                        "voltage/voltage.cpp"
                        "accumulator/accumulator.cpp"
                        "ina3221/ina3221.cpp"
                        "wifi_ap/wifi_ap.cpp"
                        "web_server/web_server.cpp"
                        "rtc/rtc.cpp"
                INCLUDE_DIRS "." 
                                "imu" 
                                "temperature"
                                "sd_logger" 
                                "fuel" 
                                "voltage" 
                                "accumulator"
                                "ina3221"
                                "wifi_ap" 
                                "web_server"
                                "rtc"
                EMBED_TXTFILES "dashboard/index.html"
                                "dashboard/style.css"
                                "dashboard/script.js")